# SCHNApps

./: .travis.yml  CMakeLists.txt  CMakeOptions.txt.sample  README.md  appveyor.yml
schnapps/: CMakeLists.txt  main.cpp
schnapps/core/: CMakeLists.txt  camera.cpp  camera.h  cells_set.cpp  cells_set.h  color_combo_box.cpp  color_combo_box.h  control_dock_camera_tab.cpp  control_dock_camera_tab.h  control_dock_camera_tab_widget.ui  control_dock_map_tab.cpp  control_dock_map_tab.h  control_dock_map_tab_widget.ui  control_dock_plugin_tab.cpp  control_dock_plugin_tab.h  control_dock_plugin_tab_widget.ui  dll.h  map_handler.cpp  map_handler.h  object.cpp  object.h  plugin.cpp  plugin.h  plugin_interaction.cpp  plugin_interaction.h  plugin_processing.cpp  plugin_processing.h  plugin_provider.cpp  plugin_provider.h  schnapps.cpp  schnapps.h  schnapps.ui  schnapps_coreConfig.cmake.in  schnapps_window.cpp  schnapps_window.h  schnapps_window_factory.h  settings.cpp  settings.h  settings.json  settings_widget.cpp  (+12 more)
schnapps/plugins/: CMakeLists.txt
schnapps/plugins/attribute_editor/: CMakeLists.txt  add_attribute_dialog.cpp  add_attribute_dialog.h  add_attribute_dialog.ui  attribute_editor.cpp  attribute_editor.h  attribute_factory.h  dll.h  edit_attribute_dialog.cpp  edit_attribute_dialog.h  edit_attribute_dialog.ui
schnapps/plugins/cage_3d_deformation/: CMakeLists.txt  cage_3d_deformation.cpp  cage_3d_deformation.h  dialog_cage_3d_deformation.cpp  dialog_cage_3d_deformation.h  dialog_cage_3d_deformation.ui  dll.h  map_parameters.h  plugin_cage_3d_deformationConfig.cmake.in
schnapps/plugins/cmap0_provider/: CMakeLists.txt  cmap0_cells_set.cpp  cmap0_cells_set.h  cmap0_handler.cpp  cmap0_handler.h  cmap0_provider.cpp  cmap0_provider.h  cmap0_provider.ui  cmap0_provider_dock_tab.cpp  cmap0_provider_dock_tab.h  dll.h  plugin_cmap0_providerConfig.cmake.in
schnapps/plugins/cmap1_provider/: CMakeLists.txt  cmap1_cells_set.cpp  cmap1_cells_set.h  cmap1_handler.cpp  cmap1_handler.h  cmap1_provider.cpp  cmap1_provider.h  cmap1_provider.ui  cmap1_provider_dock_tab.cpp  cmap1_provider_dock_tab.h  dll.h  plugin_cmap1_providerConfig.cmake.in
schnapps/plugins/cmap2_provider/: CMakeLists.txt  cmap2_cells_set.cpp  cmap2_cells_set.h  cmap2_handler.cpp  cmap2_handler.h  cmap2_provider.cpp  cmap2_provider.h  cmap2_provider.ui  cmap2_provider_dock_tab.cpp  cmap2_provider_dock_tab.h  dll.h
schnapps/plugins/cmap3_provider/: CMakeLists.txt  cmap3_cells_set.cpp  cmap3_cells_set.h  cmap3_handler.cpp  cmap3_handler.h  cmap3_provider.cpp  cmap3_provider.h  cmap3_provider.ui  cmap3_provider_dock_tab.cpp  cmap3_provider_dock_tab.h  dll.h  plugin_cmap3_providerConfig.cmake.in
schnapps/plugins/cmap_provider/: CMakeLists.txt  cmap0_cells_set.cpp  cmap0_cells_set.h  cmap0_handler.cpp  cmap0_handler.h  cmap0_provider.ui  cmap0_provider_dock_tab.cpp  cmap0_provider_dock_tab.h  cmap1_cells_set.cpp  cmap1_cells_set.h  cmap1_handler.cpp  cmap1_handler.h  cmap1_provider.ui  cmap1_provider_dock_tab.cpp  cmap1_provider_dock_tab.h  cmap2_cells_set.cpp  cmap2_cells_set.h  cmap2_handler.cpp  cmap2_handler.h  cmap2_provider.ui  cmap2_provider_dock_tab.cpp  cmap2_provider_dock_tab.h  cmap3_cells_set.cpp  cmap3_cells_set.h  cmap3_handler.cpp  cmap3_handler.h  cmap3_provider.ui  cmap3_provider_dock_tab.cpp  cmap3_provider_dock_tab.h  cmap_cells_set.cpp  cmap_cells_set.h  cmap_handler.cpp  cmap_handler.h  cmap_provider.cpp  cmap_provider.h  dll.h  plugin_cmap_providerConfig.cmake.in  undirected_graph_handler.cpp  undirected_graph_handler.h
schnapps/plugins/empty_plugin/: CMakeLists.txt  dll.h  empty_plugin.cpp  empty_plugin.h
schnapps/plugins/export/: CMakeLists.txt  dll.h  export.cpp  export.h  export_dialog.cpp  export_dialog.h  export_dialog.ui  plugin_exportConfig.cmake.in
schnapps/plugins/extract_surface/: CMakeLists.txt  dll.h  extract_dialog.cpp  extract_dialog.h  extract_dialog.ui  extract_surface.cpp  extract_surface.h  plugin_extract_surfaceConfig.cmake.in.txt
schnapps/plugins/image/: CMakeLists.txt  dll.h  image.cpp  image.h  image.ui  image_dock_tab.cpp  image_dock_tab.h  plugin_imageConfig.cmake.in  todo.txt
schnapps/plugins/import/: CMakeLists.txt  dll.h  import.cpp  import.h  plugin_importConfig.cmake.in  settings.json
schnapps/plugins/merge/: CMakeLists.txt  dll.h  merge.cpp  merge.h  merge_dialog.cpp  merge_dialog.h  merge_dialog.ui  plugin_mergeConfig.cmake.in
schnapps/plugins/merge_plugin/: CMakeLists.txt  dll.h  merge_dialog.cpp  merge_dialog.h  merge_dialog.ui  merge_plugin.cpp  merge_plugin.h
schnapps/plugins/meshgen/: CMakeLists.txt  cgal_export.ui  dll.h  meshgen.cpp  meshgen.h  meshgen_dialog.cpp  meshgen_dialog.h  netgen_export.ui  netgen_structure_io.cpp  netgen_structure_io.h  tetgen_export.ui  tetgen_structure_io.cpp  tetgen_structure_io.h  volume_mesh_from_surface.cpp  volume_mesh_from_surface.h  volume_mesh_from_surface_dialog.cpp  volume_mesh_from_surface_dialog.h
schnapps/plugins/point_set_render/: CMakeLists.txt  dll.h  map_parameters.h  plugin_point_set_renderConfig.cmake.in  point_set_render.cpp  point_set_render.h  point_set_render.ui  point_set_render_dock_tab.cpp  point_set_render_dock_tab.h
schnapps/plugins/polyline_render/: CMakeLists.txt  dll.h  map_parameters.h  plugin_polyline_renderConfig.cmake.in  polyline_render.cpp  polyline_render.h  polyline_render.ui  polyline_render_dock_tab.cpp  polyline_render_dock_tab.h
schnapps/plugins/render_transparency/: CMakeLists.txt  dll.h  plugin_render_transparencyConfig.cmake.in  render_transparency.cpp  render_transparency.h
schnapps/plugins/selection/: CMakeLists.txt  dll.h  map_parameters.h  plugin_selectionConfig.cmake.in  selection.cpp  selection.h  selection.ui  selection_dock_tab.cpp  selection_dock_tab.h
schnapps/plugins/shallow_water/: CMakeLists.txt  dll.h  shallow_water.cpp  shallow_water.h  shallow_water.ui  shallow_water_dock_tab.cpp  shallow_water_dock_tab.h
schnapps/plugins/shallow_water_2/: CMakeLists.txt  dialog_shallow_water.cpp  dialog_shallow_water.ui  dll.h  (+5 more)
schnapps/resources/: resources.qrc
(+341 files in other folders)
