find_package(Qt5 5.4.0 COMPONENTS Widgets REQUIRED)

file(GLOB plugin_dirs RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_SOURCE_DIR}/*)
foreach(plug_dir ${plugin_dirs})
  if(IS_DIRECTORY  ${CMAKE_CURRENT_SOURCE_DIR}/${plug_dir})
	  if(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/${plug_dir}/CMakeLists.txt")
		  option(USE_PLUGIN_${plug_dir} "compile $(plug_dir}" ON )
	  endif()
  endif()
endforeach()


if ((Qt5Widgets_VERSION VERSION_GREATER 5.5.99) AND ${USE_PLUGIN_surface_render_transp})
  add_definitions("-D USE_TRANSP")
  set (USE_TRANSP ON)
endif()

foreach(plug_dir ${plugin_dirs})
  if(IS_DIRECTORY  ${CMAKE_CURRENT_SOURCE_DIR}/${plug_dir})
	  if(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/${plug_dir}/CMakeLists.txt")
		  if (${USE_PLUGIN_${plug_dir}})
			  add_subdirectory( ${plug_dir} )
		  endif()
	  endif()
  endif()
endforeach()

#add_subdirectory(import)
#add_subdirectory(export)
#add_subdirectory(selection)
#add_subdirectory(surface_differential_properties)
#add_subdirectory(surface_render)
#add_subdirectory(surface_render_vector)
#add_subdirectory(surface_render_scalar)
#add_subdirectory(surface_render_transp)
#add_subdirectory(surface_modelisation)
#add_subdirectory(volume_render)
#add_subdirectory(image)
#add_subdirectory(meshgen)
#add_subdirectory(extract_surface)
#add_subdirectory(attribute_editor)
#add_subdirectory(volume_modelisation)
#add_subdirectory(merge_plugin)
#add_subdirectory(shallow_water)
#add_subdirectory(empty_plugin)
